--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hapi/joi": "^17.1.1",
     "express": "^4.17.1",
     "joi-objectid": "^3.0.1",
+    "joi-password-complexity": "^4.0.0",
     "mongoose": "^5.10.2"
   }
 }
