--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "joi-objectid": "^3.0.1",
     "joi-password-complexity": "^4.0.0",
