--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi-objectid": "^3.0.1",
     "joi-password-complexity": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2"
   }
 }
